--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
+<main>
 
-
-       <header id="home">
+    <header id="home">
 
         <!-- Start Navigation -->
         <nav class="navbar navbar-default attr-border navbar-sticky bootsnav" style="background-color: #000;">
@@ -47,3 +47,4 @@
 
         </nav>
     </header>
+</main>
