--- a/src/app/components/toptreks/toptreks.component.html
+++ b/src/app/components/toptreks/toptreks.component.html
@@ -1,133 +1,170 @@
 <main>
-	 <section class="section-base section-color">
+    <section class="section-base section-color">
+        <div class="container">
+            <ul class="slider" data-options="type:carousel,arrows:true,perView:3,perViewLg:2,perViewMd:1,gap:30,controls:out">
+                <li  *ngFor="let tix of tixs">
+                    <div class="cnt-box cnt-box-info boxed text-uppercase" data-href="treks-single.html">
+                        <div class="extra-field">From ${{tix.price}}</div>
+                        <a href="treks-single.html" class="img-box"><img src="assets/media/image-5.jpg" alt="" /></a>
+                        <div class="caption">
+                            <h2>{{tix.poductName}}</h2>
+                            <div class="cnt-info">
+                                <div><span>Days</span><span>{{tix.days}}</span></div>
+                                <div><span>Group size</span><span>{{tix.groupSize}}</span></div>
+                                <div><span>Difficulty</span><span>{{tix.dificulty}}</span></div>
+                            </div>
+                            <p>
+                               {{tix.description}}
+                            </p>
+                            <div class="bottom-info">
+                                {{tix.address}}
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="section-base">
             <div class="container">
-
- <ul class="slider" data-options="type:carousel,arrows:true,perView:3,perViewLg:2,perViewMd:1,gap:30,controls:out">
-                    <li  *ngFor="let tix of tixs">
-                        <div class="cnt-box cnt-box-info boxed text-uppercase" data-href="treks-single.html">
-                            <div class="extra-field">From ${{tix.price}}</div>
-                            <a href="treks-single.html" class="img-box"><img src="assets/media/image-5.jpg" alt="" /></a>
-                            <div class="caption">
-                                <h2>{{tix.poductName}}</h2>
-                                <div class="cnt-info">
-                                    <div><span>Days</span><span>{{tix.days}}</span></div>
-                                    <div><span>Group size</span><span>{{tix.groupSize}}</span></div>
-                                    <div><span>Difficulty</span><span>{{tix.dificulty}}</span></div>
-                                </div>
-                                <p>
-                                   {{tix.description}}
-                                </p>
-                                <div class="bottom-info">
-                                    {{tix.address}}
-                                </div>
-                            </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="title">
+                            <h2>Que ofrecemos?</h2>
+                            <p>Tours y Viajes</p>
                         </div>
-                    </li>
-         
-                </ul>
-
-            <!-- --------------------------------
-            INICIO CAROUSEL FUNCIONAL
-            -------------------------------- -->
-
-
-                <!-- <owl-carousel-o [options]="customOptions">
-                            <ng-template carouselSlide *ngFor="let tix of tixs">
-                                <div class="list-slider">
-                                    <div class="cnt-box cnt-box-info boxed text-uppercase" data-href="treks-single.html">
-                                        <div class="extra-field">From ${{tix.price}}
-                                        </div>
-                                        <a href="treks-single.html" class="img-box">
-                                            <img src="assets/media/image-5.jpg" alt="" />
-                                        </a>
-                                        <div class="caption">
-                                            <h2>{{tix.productName}}</h2>
-                                            <div class="cnt-info">
-                                                <div><span>{{tix.days}}</span><span>3</span></div>
-                                                <div><span>{{tix.groupSize}}</span><span>10</span></div>
-                                                <div><span>{{tix.dificulty}}</span><span>Easy</span></div>
-                                            </div>
-                                            <p>
-                                               {{tix.description}}
-                                            </p>
-                                            <div class="bottom-info">
-                                                {{tix.address}}
-                                            </div>
-                                        </div>
-                                    </div>
-                               </div>
-                            </ng-template>  
-                        </owl-carousel-o> -->
-
-
-<!--             --------------------------------
-            FIN CAROUSEL FUNCIONAL
-            --------------------------------
- -->
-
-                <!-- <ul class="slider" data-options="type:carousel,arrows:true,perView:3,perViewLg:2,perViewMd:1,gap:30,controls:out">
-                    <li>
-                        <div class="cnt-box cnt-box-info boxed text-uppercase" data-href="treks-single.html">
-                            <div class="extra-field">From $49</div>
-                            <a href="treks-single.html" class="img-box"><img src="assets/media/image-5.jpg" alt="" /></a>
-                            <div class="caption">
-                                <h2>Piedras Blancas</h2>
-                                <div class="cnt-info">
-                                    <div><span>Days</span><span>3</span></div>
-                                    <div><span>Group size</span><span>10</span></div>
-                                    <div><span>Difficulty</span><span>Easy</span></div>
+                        <p>
+                             Viaja y conoce la magnificencia que los ANDES nos brinda. Vive junto a nosotros la mejor asistencia y conducción para turistas.
+                        </p>
+                        <a href="treks.html" class="btn btn-sm btn-circle btn-icon"><i class="im-geo2-love"></i>Ver DESTINOS</a>
+                    </div>
+                    <div class="col-lg-8">
+                        <ul class="accordion-list" data-open="1">
+                            <li>
+                                <a href="#">Nuestra ubicación</a>
+                                <div class="content">
+                                    <p>
+                                        Somos una empresa de viaje internacional, nuestra sede se encuentra en la ciudad de Santiago de Chile.
+                                    </p>
                                 </div>
-                                <p>
-                                    Monte bianco is a mountain located in the deep nature and rivers.
-                                </p>
-                                <div class="bottom-info">
-                                    Monte bianco, Alpes, Italy
+                            </li>
+                            <li>
+                                <a href="#">Sobre nuestras caminatas y viajes</a>
+                                <div class="content">
+                                    <p>
+                                        Viajes y TOURS diseñados FULL DAYS para todo público. <br> Coordinado desde la salida hasta el retorno, con asistencia personalizada. 
+                                    </p>
                                 </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="cnt-box cnt-box-info boxed text-uppercase" data-href="treks-single.html">
-                            <div class="extra-field">From $89</div>
-                            <a href="treks-single.html" class="img-box"><img src="assets/media/image-6.jpg" alt="" /></a>
-                            <div class="caption">
-                                <h2>Laguna del Mule</h2>
-                                <div class="cnt-info">
-                                    <div><span>Days</span><span>5</span></div>
-                                    <div><span>Group size</span><span>5</span></div>
-                                    <div><span>Difficulty</span><span>Medium</span></div>
+                            </li>
+                            <li>
+                                <a href="#">Sobre nuestro equipo e invitados</a>
+                                <div class="content">
+                                    <p>
+                                        Contamos con un capital humano profesional en el área de escursiones, escaladas y seguridad de riesgos.
+                                    </p>
                                 </div>
-                                <p>
-                                    Civetta is a mountain located in alps and is one of the most famous.
-                                </p>
-                                <div class="bottom-info">
-                                    Civetta, Alpes, Italy
+                            </li>
+                            <li>
+                                <a href="#">Cómo llegar con seguridad a su destinos</a>
+                                <div class="content">
+                                    <p>
+                                        Incluimos transporte con seguro de viaje, Guias y coordinador para llegar al destino seleccionado.
+                                    </p>
                                 </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="cnt-box cnt-box-info boxed text-uppercase" data-href="treks-single.html">
-                            <div class="extra-field">From $89</div>
-                            <a href="treks-single.html" class="img-box"><img src="assets/media/image-7.jpg" alt="" /></a>
-                            <div class="caption">
-                                <h2>Valle de los condes</h2>
-                                <div class="cnt-info">
-                                    <div><span>Days</span><span>1</span></div>
-                                    <div><span>Group size</span><span>15</span></div>
-                                    <div><span>Difficulty</span><span>Medium</span></div>
-                                </div>
-                                <p>
-                                    Nevegal is a mountain near a beautiful and hidden small village.
-                                </p>
-                                <div class="bottom-info">
-                                    Civetta, Alpes, Italy
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul> -->
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
-     
+        <section class="section-base">
+            <div class="container">
+                <div class="title align-center">
+                    <h2>¿POR QUÉ ELEGÍRNOS?</h2>
+                    <p>Brindamos la mejor experiencia</p>
+                </div>
+                <table class="table table-grid table-border table-6-md">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-people-oncloud"></i>
+                                    <div class="caption">
+                                        <h3>Equipo experimentado</h3>
+                                        <p>Siempre vivimos dentro de nuestra increíble naturaleza</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-address-book"></i>
+                                    <div class="caption">
+                                        <h3>Booking</h3>
+                                        <p>Reservaciones en linea, solo en 2 click</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-trekking"></i>
+                                    <div class="caption">
+                                        <h3>Excursionistas expertos</h3>
+                                        <p>Viaja de la mano de nuestro equipo experto</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-tram"></i>
+                                    <div class="caption">
+                                        <h3>Servicio de transporte</h3>
+                                        <p>Descubre lugares naturales escondidos con nuestros tours</p>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-medicine"></i>
+                                    <div class="caption">
+                                        <h3>Cruz roja</h3>
+                                        <p>Botiquín de primeros auxilios</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-coffee"></i>
+                                    <div class="caption">
+                                        <h3>Snacks y bebidas</h3>
+                                        <p>Tu viaje con recarga alimenticia</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-photos"></i>
+                                    <div class="caption">
+                                        <h3>Fotos</h3>
+                                        <p>Nos tomamos el tiempo para que tengas recuerdos</p>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="icon-box icon-box-top align-center">
+                                    <i class="im-map2"></i>
+                                    <div class="caption">
+                                        <h3>Descubre</h3>
+                                        <p>Todos nuestros servicios <br>
+                                        <a href="about.html">Ver más</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section> 
 </main>
